--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
     "Operating System :: OS Independent",
 ]
+dependencies = ["PyYAML>=6.0.1", "GitPython>=4.0.11", "numpy>=1.26.3"]
 dynamic = ['version']
 [tool.setuptools.dynamic]
 version = { attr = "mox.ruby.__version__" }
